1. fix search reset (z-index and events) 2. fix search JS
git-svn-id: https://dev.cedis.fu-berlin.de/svn/eaz/zwar_archive/trunk@1478 34bfa2f4-0c52-0410-afca-732f319d8f5a

--- a/public/stylesheets/search.css
+++ b/public/stylesheets/search.css
@@ -174,6 +174,7 @@ span.hits a:hover {
 	position: absolute;
 	top: 4px;
 	right: 10px;
+    z-index: 10;
 }
 
 #searchReset a {
